--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
-	"name": "Sample Theme",
-	"version": "1.0.0",
-	"minAppVersion": "1.0.0",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md"
+    "name": "Neomorphic Obsidian",
+    "version": "1.0.0",
+    "minAppVersion": "0.16.0",
+    "author": "Klavyelibey",
+    "authorUrl": "https://github.com/mikaelkara",
+    "description": "Modern, minimalist ve neomorphic tasarım anlayışıyla oluşturulmuş Obsidian teması",
+    "license": "MIT"
 }
